<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadFragment">

    <EditText
        android:id="@+id/recipeName"
        android:layout_width="291dp"
        android:layout_height="77dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="288dp"
        android:ems="10"
        android:hint="@string/recipe_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/instructions"
        android:layout_width="122dp"
        android:layout_height="153dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="51dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/ingredient_step"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="60dp"
        android:text="@string/add_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="202dp"
        android:layout_marginBottom="1dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/createRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="3dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/prepTime"
        android:layout_width="149dp"
        android:layout_height="62dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="218dp"
        android:ems="10"
        android:hint="@string/prep_time_example"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/cookTime"
        android:layout_width="149dp"
        android:layout_height="61dp"
        android:layout_marginStart="168dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="219dp"
        android:ems="10"
        android:hint="@string/cook_time_example"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/foodImage"
        android:layout_width="128dp"
        android:layout_height="91dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>